# voyverse-mitre-atlas

./: .env.example  .gitignore  pyproject.toml
api/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: CitationDemo.css  CitationDemo.tsx  CitedAnswer.jsx  EvidenceCard.jsx  ExampleQueries.css  ExampleQueries.tsx  FooterCTA.css  FooterCTA.tsx  GraphBackground.css  GraphBackground.tsx  Hero.css  Hero.tsx  HowItWorks.css  HowItWorks.tsx  QueryInput.jsx  Stats.css  Stats.tsx  ThreeLayer.css  ThreeLayer.tsx
frontend/src/components/query/: AnswerPanel.css  AnswerPanel.tsx  InvestigationTimeline.css  InvestigationTimeline.tsx  QueryInput.css  QueryInput.tsx  QueryPage.css  QueryPage.tsx  SuggestedQueries.css  SuggestedQueries.tsx  ToolCallCard.css  ToolCallCard.tsx
frontend/src/data/: exampleQueries.ts
frontend/src/hooks/: useSSEQuery.ts
frontend/src/styles/: effects.css  tokens.css
ingest/: parse.py  schema.py  validate.py
queries/: example_queries.cypher  query_runner.py
reasoning_engine/: agent.py  citations.py  tools.py
scripts/: load.py  reset.py
tests/: test_parse.py
